...
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/artistRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/artist_item" />

</FrameLayout>
