...
            android:text="@string/create_album_name_title"
            android:textAlignment="textStart"
            android:textColor="@color/Azul"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/createAlbumName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/create_album_name_hint"
            android:inputType="text"
            android:maxLength="50"
...
            android:text="@string/create_album_image_title"
            android:textAlignment="textStart"
            android:textColor="@color/Azul"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/createAlbumImage"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/create_album_image_hint"
            android:inputType="text"
            android:maxLength="2048"
...
            android:text="@string/create_album_release_date_title"
            android:textAlignment="textStart"
            android:textColor="@color/Azul"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/releaseDate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="10dp"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/create_album_release_date_hint"
...
